# ChangeLog for www-servers/cherokee
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.31 2006/12/27 02:37:08 flameeyes Exp $

*cherokee-0.5.6 (27 Dec 2006)

  27 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/cherokee-0.4.5-Makefile.am.patch,
  -files/cherokee-0.4.5-cherokee.conf, -files/cherokee-0.4.5-init.d,
  -files/cherokee-0.4.17-cherokee.conf, -files/cherokee-0.4.17-init.d,
  -files/cherokee-0.4.21-no-handler_admin.diff,
  -files/cherokee-0.4.25-fix-static.diff, +files/cherokee-initd-0.5.6,
  -cherokee-0.5.2.ebuild, -cherokee-0.5.4.ebuild, -cherokee-0.5.5.ebuild,
  +cherokee-0.5.6.ebuild:
  Big new-maintainer cleanup. Bump to latest 0.5.6, remove old versions,
  remove dead files in $FILESDIR, add new init.d file that leave to cherokee
  to get into background.

  27 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Metadata update, I'll take over maintainership (leaving www-servers as herd).

  14 Dec 2006; Elfyn McBratney <beu@gentoo.org> cherokee-0.5.2.ebuild,
  cherokee-0.5.4.ebuild, cherokee-0.5.5.ebuild:
  Update HOMEPAGE/SRC_URI; fixes bug 157966.

  02 Oct 2006; Daniel Gryniewicz <dang@gentoo.org> cherokee-0.5.5.ebuild:
  Marked ~amd64 for bug #149342

*cherokee-0.5.5 (23 Sep 2006)

  23 Sep 2006; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-0.5.5.ebuild:
  new version

*cherokee-0.5.4 (18 Jul 2006)

  31 Aug 2006; Matthias Schwarzott <zzam@gentoo.org> ChangeLog:
  Removed the wrong byte out of 16 May 2005 changelog entry, makeing it no
  longer irritate the pager less, Bug #144860.

  18 Jul 2006; J. Alberto Suárez López <bass@gentoo.org>
  -cherokee-0.4.30.ebuild, -cherokee-0.5.0.ebuild, -cherokee-0.5.1.ebuild,
  +cherokee-0.5.4.ebuild:
  version bump

*cherokee-0.5.2 (17 Apr 2006)

  17 Apr 2006; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-0.5.2.ebuild: