@@ -6,14 +6,14 @@ MD5 aa0a02cf30b359170185714c37341c80 files/cherokee-initd-0.5.6 587
 RMD160 50ab8f40e9258c96685373ad38f9440ca8b496b5 files/cherokee-initd-0.5.6 587
 SHA256 09985375cc821db0c12fed621d505bad134acfb578432b1a940216f5e83a5551 files/cherokee-initd-0.5.6 587
 DIST cherokee-0.5.6.tar.gz 1392282 RMD160 fd5661449bd845e3be1911490f02144a805f5c9f SHA1 5e437c2315782bc6ac1d98f8db3b7838313a229a SHA256 d19ac8a85c252ccfe04c06ce0ec9b03d036b27d07c6db4601ce7d6b33c4e9cc8
-EBUILD cherokee-0.5.6.ebuild 2403 RMD160 efacab6958ffe2ba4f9f7e242d4c17bb150e37cc SHA1 429c342bacab11b5263ce350154a4e78af8578ee SHA256 33339773a36abc60b55d01ae19713f23c804aee50d80e17a6522ef6328eecd5a
-MD5 da71889cc1e70798e3b69aaea97ce091 cherokee-0.5.6.ebuild 2403
-RMD160 efacab6958ffe2ba4f9f7e242d4c17bb150e37cc cherokee-0.5.6.ebuild 2403
-SHA256 33339773a36abc60b55d01ae19713f23c804aee50d80e17a6522ef6328eecd5a cherokee-0.5.6.ebuild 2403
-MISC ChangeLog 10756 RMD160 85dededa2588ae12455095b76c43dbe13da1534c SHA1 578bbc5d8c779696666ed521ebbddc67189a93c1 SHA256 9d5e2e26fd9404336de3d8ee572a573235873478a52066524ab8f7ee13b7bb46
-MD5 1331a6ee17df48808538e94d6d8d9d43 ChangeLog 10756
-RMD160 85dededa2588ae12455095b76c43dbe13da1534c ChangeLog 10756
-SHA256 9d5e2e26fd9404336de3d8ee572a573235873478a52066524ab8f7ee13b7bb46 ChangeLog 10756
+EBUILD cherokee-0.5.6.ebuild 2186 RMD160 1971c0cc4c08e448d745a6358f318265f9ae89ba SHA1 2891c52c61e209f6240d611d0232dff4aca099c5 SHA256 0768906fc08c6b0addf65913e5f30f516bd240c3b4a05cfcc3f5578c82e7a78d
+MD5 0f39a409f6c27f92dd5770626dc73896 cherokee-0.5.6.ebuild 2186
+RMD160 1971c0cc4c08e448d745a6358f318265f9ae89ba cherokee-0.5.6.ebuild 2186
+SHA256 0768906fc08c6b0addf65913e5f30f516bd240c3b4a05cfcc3f5578c82e7a78d cherokee-0.5.6.ebuild 2186
+MISC ChangeLog 11013 RMD160 145af4ba78141e3c8948fbc2797e1a91efd38456 SHA1 04d079c4e4e11d39b2672390457bdd555fa86dad SHA256 3b5625c9ed128200c2e356062100cf119aaaf921fb2a807af25c1db4c08c877c
+MD5 8852d5a0a5b9c2b8a8abacd5ef3f1c1c ChangeLog 11013
+RMD160 145af4ba78141e3c8948fbc2797e1a91efd38456 ChangeLog 11013
+SHA256 3b5625c9ed128200c2e356062100cf119aaaf921fb2a807af25c1db4c08c877c ChangeLog 11013
 MISC metadata.xml 269 RMD160 2f424a28702cae549abf73acbdc5e83add6381a6 SHA1 896cbff4ed1d4357fbe5ed96f1747737d6949c3c SHA256 19de4ee447412c2935b1a069641f59a069077b66a7602eaa449b8d7d8fdf1a1f
 MD5 87a36685076539a89b31661a9b2564fe metadata.xml 269
 RMD160 2f424a28702cae549abf73acbdc5e83add6381a6 metadata.xml 269
@@ -24,7 +24,7 @@ SHA256 f225430722ee46711c8426fb588ebfc1648f4e36488ca9af972ccf2f95e40b37 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFFkdxcAiZjviIA2XgRAjA4AJ44uINidTWrMiFFJQvm4oOvsp89vACfYglR
-einrsZI0X7mZXuHuFYdfElM=
-=2hSG
+iD8DBQFFkftOAiZjviIA2XgRAmXdAJ0faw1PDQWAkWo1PUU96rrTcL8NWgCg7B9k
+qrQ3IvNb2I5igv7cjSAhY88=
+=0WIg
 -----END PGP SIGNATURE-----
