@@ -1,6 +1,11 @@
 # ChangeLog for www-servers/cherokee
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.31 2006/12/27 02:37:08 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.32 2006/12/27 04:48:46 flameeyes Exp $
+
+  27 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> cherokee-0.5.6.ebuild:
+  Run elibtoolize to apply Gentoo patches as needed; install the default
+  index.html page only if coverpage useflag is enabled (not by default) to
+  avoid the nasty $ROOT lookup.
 
 *cherokee-0.5.6 (27 Dec 2006)
 
